add work section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/fontawsome/css/all.min.css">
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/css-animate/animate.css">
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -195,17 +196,76 @@
 
     </section>
     <section id="work">
-    <div id="service-box" class="content-box">
-        <div class="content-box-header wow animate fadeInDown" data-wow-delay=".5s" data-wow-duration="1s">
-            <h3>Our Work</h3>
-            <div class="header-underline">
-            </div>
+        <div id="wrork-box" class="content-box">
+            <div class="content-box-header wow animate fadeInDown" data-wow-delay=".5s" data-wow-duration="1s">
+                <h3>Our Work</h3>
+                <div class="header-underline">
+                </div>
 
+            </div>
+            <div class="container-fluid">
+                <div class="row works-container">
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/1.jpg" title="image description here">
+                                <img src="img/work/1.jpg" class="img-fluid">
+                            </a>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/2.jpg" title="image description here">
+                                <img src="img/work/2.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/3.jpg" title="image description here">
+                                <img src="img/work/3.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/4.jpg" title="image description here">
+                                <img src="img/work/4.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/5.jpg" title="image description here">
+                                <img src="img/work/5.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/6.jpg" title="image description here">
+                                <img src="img/work/6.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/7.jpg" title="image description here">
+                                <img src="img/work/7.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="image-wrapper">
+                            <a href="img/work/8.jpg" title="image description here">
+                                <img src="img/work/8.jpg" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
-        <div class="container-fluid">
-        
-        </div>
-    </div>
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -217,6 +277,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="./js/botstrape/bootstrap.min.js"></script>
     <script src="js/wow/wow.min.js"></script>
+    <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="js/default.js"></script>
 </body>
 
