--- a/index.html
+++ b/index.html
@@ -356,6 +356,17 @@
     
          </div>
     </section>
+    <section id="testimonial">
+        <div id="testimonial-box" class="content-box">
+            <div class="content-box-header wow animate fadeInDown" data-wow-delay=".5s" data-wow-duration="1s">
+                <h3>What Our customer says</h3>
+                <div class="header-underline">
+                </div>
+
+            </div> 
+        </div>
+    
+    </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
