--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="css/carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 </head>
 
-<body data-spy="scroll" data-target="#navbar-content" data-offset="56">
+<body data-spy="scroll" data-target="#navbar-content" data-offset="57">
     <header>
         <nav id="navbar-content" class="navbar navbar-expand-md navbar-dark   fixed-top  navbar-content-back">
             <a class="navbar-brand" href="/">vesco</a>
@@ -724,9 +725,9 @@
             </div>
 
         </div>
-
+<a id="back-to-top" href="#home" class="btn btn-sm btn-grenish back-to-top smooth-scroll" role="button"><i class="fa fa-angle-up fa-2x" ></i></a>
     </footer>
-
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/carousel/owl.carousel.min.js"></script>
     <script src="./js/botstrape/bootstrap.min.js"></script>
